1999-06-19  Roland McGrath  <roland@baalperazim.frob.com>

	* pager.c (free_page_buf): Fix type cast.

Tue Jun 15 21:51:58 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* pager.c: Clamp the number of free pages we keep around to some
	reasonably small value.  Patch from Mark Kettenis
	<kettenis@wins.uva.nl>.

1999-06-15  Thomas Bushnell, BSG  <tb@mit.edu>

	* inode.c (diskfs_validate_flags_change): Invert sense of test wrt
	bits that haven't yet been defined.  Reported by Kalle Olavi
	Niemitalo <tosi@ees2.oulu.fi>.

1999-05-23  Roland McGrath  <roland@baalperazim.frob.com>

	* ialloc.c (diskfs_alloc_node): Frob printf format to suppress warning.
	* getblk.c (ext2_getblk): Likewise.
	* balloc.c (ext2_free_blocks): Likewise.
	* hyper.c (get_hypermetadata): Likewise.

	* ialloc.c (diskfs_alloc_node): If creator_os is not EXT2_OS_HURD,
	suppress warnings about stale nonzero st_blocks or st_size.

1999-05-19  Roland McGrath  <roland@baalperazim.frob.com>

	* ext2fs.c (main): Include store size in panic msg when it's too small.

1999-01-23  Roland McGrath  <roland@baalperazim.frob.com>

	* ext2fs.c (main): Use diskfs_init_main.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	* inode.c (diskfs_set_statfs): Remove __ from struct members.

1998-12-21  Mark Kettenis  <kettenis@phys.uva.nl>

	* inode.c (diskfs_set_statfs): Fill in statfs members that are
	used to implement statvfs.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	* ext2fs.c (main): Pass ARGP_IN_ORDER flag to argp_parse because
	diskfs options need it.

1998-12-20  Roland McGrath  <roland@baalperazim.frob.com>

	* inode.c (diskfs_write_disknode): Add braces to silence warning.
	* pager.c (file_pager_read_page): Likewise.

	* storeinfo.c: Don't include <netinet/in.h>.

1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* dir.c (dirscanblock): Fix defn with `const'.
	(diskfs_direnter_hard): Likewise.
	* inode.c (diskfs_create_symlink_hook): Likewise.
	(write_symlink): Likewise.
